--- a/loggedin.html
+++ b/loggedin.html
@@ -2,14 +2,18 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Logged In - GoGuardian Bypass</title>
+	<title>Logged In - StudentHax Bypass</title>
 	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 	<div class="container">
 		<h1>Welcome Student, you are Logged In!</h1>
-		<p>Click the button to disable GoGuardian.</p>
-		<button id="disable-btn">Disable GoGuardian</button>
+		<p>Click any button to disable something.</p>
+		<button id="disable-goguardian-btn">Disable GoGuardian</button>
+		<button id="disable-lightspeed-btn">Disable LightSpeed</button>
+		<button id="disable-securly-btn">Disable Security</button>
+		<button id="disable-ckauthenticator-btn">Disable CKAuthenticator</button>
+		<button id="open-studenthax-btn">Open StudentHax</button>
 	</div>
 	<script src="bypass.js"></script>
 </body>
